crates/sabiql/src/tests/render_snapshots/snapshots/sabiql__render_snapshots__connection_flow__sqlite_connection_setup_file_picker_hint.snap
---
source: src/tests/render_snapshots/connection_flow.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                                                                                                                  
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                                                                                 
│ Press 'r' to load metadata            │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                       ││(select a table)                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││ ╭ New Connection ─────────────────────────────────────────────────────────────╮                                          │
│                                       ││ │                                                                             │                                          │
│                                       ││ │  Type:       [ SQLite                   ▼ ]                                 │                                          │
│                                       │└─│  Name:       [                            ]                                 │──────────────────────────────────────────┘
│                                       │┌ │  File:       [ /tmp/app.db                ]                                 │──────────────────────────────────────────┐
│                                       ││(│                                                                             │                                          │
│                                       ││ │  Note: Connection info is stored locally in plain text                      │                                          │
│                                       ││ │                                                                             │                                          │
│                                       ││ ╰ Tab: Next │ Shift+Tab: Prev │ Ctrl+F: Files │ Ctrl+S: Connect │ Esc: Cancel ╯                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
^S:Connect  Tab:Next  ⇧Tab:Prev  ^F:Files  Esc:Cancel
